<resources>
    <string name="app_name">Caption This</string>
    <string name="title">Caption\nThis</string>
    <string name="intro">Caption This</string>
    <string name="logo_content">Logo</string>
    <string name="camera_button_description">camera button</string>
    <string name="document_button_descriptio">document_button</string>
    <string name="main_text_instruction">Choose a picture</string>
    <string name="general">Default</string>
    <string name="title_text_view">Caption\nThis</string>
    <string name="picture_description">Nothing to describe</string>
    <string name="image_description_dummy">Image description</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_to">New to Caption This? Register here</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="already">Already a member? Login</string>
    <string name="re_pwd">Re-enter Password</string>
    <string name="forgot">Forgot Password?</string>
    <string name="current_pwd">Current Password</string>
    <string name="new_pwd">New Password</string>
    <string name="confirm_pwd">Confirm Password</string>
    <string name="msg_loading">Loading...</string>
</resources>
