<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".IntroActivity">

    <LinearLayout
        android:id="@+id/title_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/logo_no_text"
            android:fontFamily="@font/bungee_shade"
            android:gravity="center"
            android:padding="10sp"
            android:text="@string/title_text_view"
            android:textColor="#303F9F"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:text="@string/title" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/registerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:text="@string/login"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fstTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/bungee"
            android:paddingStart="100sp"
            android:paddingEnd="100sp"
            android:text="@string/email"
            android:textColor="#F5F2F2"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="10sp" />

        <TextView
            android:id="@+id/secTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bungee"
            android:paddingStart="100sp"
            android:paddingEnd="100sp"
            android:text="@string/password"
            android:textColor="#F5F5F5"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/txt_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10sp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:ems="10"
            android:importantForAutofill="no" />

        <ImageButton
            android:id="@+id/login_button"
            android:layout_width="108dp"
            android:layout_height="47dp"
            android:layout_gravity="center"
            android:background="@drawable/login_button"
            android:contentDescription="@string/general"
            android:padding="30sp" />

        <TextView
            android:id="@+id/register_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/new_to"
            android:textColor="#3F51B5"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>