<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".IntroActivity">

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/logo_no_text"
        android:fontFamily="@font/bungee_shade"
        android:gravity="center"
        android:padding="10sp"
        android:text="@string/title_text_view"
        android:textColor="#303F9F"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:text="@string/title" />

    <TextView
        android:id="@+id/name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/bungee"
        android:paddingStart="100sp"
        android:paddingEnd="100sp"
        android:text="@string/name"
        android:textColor="#F5F2F2"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/name_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="10sp" />

    <TextView
        android:id="@+id/email_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/bungee"
        android:paddingStart="100sp"
        android:paddingEnd="100sp"
        android:text="@string/email"
        android:textColor="#F5F2F2"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="10sp" />

    <TextView
        android:id="@+id/password_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bungee"
        android:paddingStart="100sp"
        android:paddingEnd="100sp"
        android:text="@string/password"
        android:textColor="#F5F5F5"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/pwd_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="10sp" />

    <TextView
        android:id="@+id/re_password_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bungee"
        android:paddingStart="100sp"
        android:paddingEnd="100sp"
        android:text="@string/re_pwd"
        android:textColor="#F5F5F5"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/re_pwd_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/re_pwd"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="10sp" />

    <ImageButton
        android:id="@+id/register_button"
        android:layout_width="108dp"
        android:layout_height="47dp"
        android:layout_gravity="center"
        android:background="@drawable/register_button"
        android:contentDescription="@string/general"
        android:padding="30sp" />

    <TextView
        android:id="@+id/login_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/already"
        android:textColor="#3F51B5"
        android:textSize="20sp" />

    <!--<TextView
        android:id="@+id/registerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:text="@string/register"
        android:textSize="30sp"
        android:textStyle="bold" />-->

</LinearLayout>