<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".IntroActivity">

    <LinearLayout
        android:id="@+id/horizontal_layout"
        android:layout_width="match_parent"
        android:layout_height="179dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="0dp"
            android:layout_height="189dp"
            android:layout_weight="1"
            android:drawableStart="@drawable/logo_no_text"
            android:fontFamily="@font/merienda"
            android:text="@string/title_text_view"
            android:textColor="#303F9F"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold"
            tools:text="@string/title" />

        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="106dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:contentDescription="@string/general"
            app:srcCompat="@drawable/next_button" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10sp">

        <com.github.barteksc.pdfviewer.PDFView
            android:id="@+id/pdfView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

</LinearLayout>