<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".PhotoActivity"
    >


    <LinearLayout
        android:id="@+id/main_linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/title_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:visibility="visible">

            <TextView
                android:id="@+id/title_text_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/merienda"
                android:text="@string/title_text_view"
                android:textColor="#303F9F"
                android:textSize="45sp"
                android:textStyle="bold"
                android:drawableStart="@drawable/logo_no_text"
                tools:text="@string/title" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="217dp" />

            <TextView
                android:id="@+id/main_instruction"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:lineSpacingExtra="18sp"
                android:lines="4"
                android:text="@string/main_text_instruction"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#F57C00"
                android:textSize="30sp"
                android:textStyle="bold"
                android:typeface="normal"
                tools:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|top"
            android:orientation="horizontal">

            <Space
                android:layout_width="25dp"
                android:layout_height="42dp" />

            <ImageButton
                android:id="@+id/camera_button"
                android:layout_width="154dp"
                android:layout_height="42dp"
                android:background="@drawable/camera_button"
                android:contentDescription="@string/camera_button_description"
                android:scaleType="center"
                app:srcCompat="@drawable/camera_button" />

            <Space
                android:layout_width="50dp"
                android:layout_height="42dp" />

            <ImageButton
                android:id="@+id/gallery_button"
                android:layout_width="154dp"
                android:layout_height="42dp"
                android:background="@drawable/galery_button"
                android:contentDescription="@string/document_button_descriptio"
                android:scaleType="center"
                app:srcCompat="@drawable/galery_button" />

            <Space
                android:layout_width="25dp"
                android:layout_height="42dp" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
