<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".IntroActivity"
    >


    <LinearLayout
        android:id="@+id/main_linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:background="@drawable/back_button"
            android:contentDescription="@string/general" />

        <LinearLayout
            android:id="@+id/top_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10sp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="527dp"
                    android:contentDescription="@string/general"
                    tools:srcCompat="@tools:sample/avatars" />
            </FrameLayout>

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="242dp"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:contentDescription="@string/general"
                app:srcCompat="@drawable/decr_button" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10sp">

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/white_gradient"
                    android:ems="10"
                    android:hint="@string/image_description_dummy"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:text="@string/picture_description"
                    android:textColor="#110C0C" />
            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
